add homepage structure on handlebars

--- a/examplehomepage.html
+++ b/examplehomepage.html
@@ -1,4 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en" data-theme="dark">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.13.6/dist/full.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/public/css/style.css">
+    <title>Git Productive</title>
+</head>
+<body>
+    
     <header>
         <div class="navbar bg-base-100 neutral">
             <div class="navbar-start">
@@ -37,15 +48,15 @@
     <main>
         <div class="flex flex-row">
         <div class="mt-24 ml-20">
-            <h2>Git Productive With Us!</h2>
+            <h1>Git Productive With Us!</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-            <button class="btn">Button</button>
+            <button class="btn mt-4 justify-end">Learn More</button>
         </div>
         <img src="./public/images/examplephoto.png" alt="image">
         </div>
      
 <!-- info cards -->
-    <div class="flex flex-row">
+    <div class="flex flex-row mt-8">
         <!-- info card 1 -->
         <div class="card w-96 bg-neutral shadow-xl basis-1/4 infocard m-2">
             <div class="card-body">
@@ -116,3 +127,5 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/public/js/homepage.js"></script>
+</body>
+</html>
